<resources>
    <string name="app_name">Auto loan calc</string>
    <string name="car_price">Car Price</string>
    <string name="downpayment">Down Payment</string>
    <string name="tradeIn">Trade-In Value</string>
    <string name="loanLength">Length of loan:</string>
    <string name="thirtysix">36</string>
    <string name="fourtyeight">48</string>
    <string name="sixty">60</string>
    <string name="seventytwo">72</string>
    <string name="loanReport">Loan Report</string>
    <string name="APR">Annual Percentage Rate</string>
    <string name="tax">Sales Tax</string>
    <string name="goBack">Return to Data Entry</string>
    <string name="estimatedPayment">Your Estimated Payment</string>
    <string name="zeroMoneys">$0</string>
    <string name="estSales">Estimated Sales Tax</string>
    <string name="totloan">Total Loan Amount</string>
    <string name="TotInterest">Total interest paid</string>
    <string name="totLoan"><![CDATA[Total loan & interest paid]]></string>
    <string name="monthPay">Monthly payment</string>
</resources>