<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtSalesTax"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="304dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLoanReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAPR">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSalesTax1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tax"
            android:imeOptions="actionDone"
            android:inputType="number|numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPrice1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_price"
            android:imeOptions="actionNext"
            android:inputType="number|numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDown1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/downpayment"
            android:imeOptions="actionNext"
            android:inputType="number|numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTradeIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDown">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTradeIn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tradeIn"
            android:imeOptions="actionNext"
            android:inputType="number|numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtMonths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/loanLength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTradeIn" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="287dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTradeIn">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/thirtysix" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:text="@string/fourtyeight" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sixty" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seventytwo" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtAPR"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="303dp"
        android:layout_height="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAPR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/APR"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLoanReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="goToLoanReport"
        android:text="@string/loanReport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>